Mon Nov  7 22:16:51 1994  Theodore Y. Ts'o  (tytso@dcl)

        * configure.in: Check for sys/time.h and time.h.

	* defs.h: Pull in <sys/time.h> and <time.h> as necessary.

	* sys_term.c (startslave): Don't define time() manually.

	* configure.in: Add check for util library (needed for the Alpha)

Thu Sep 29 22:51:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change

Tue Aug 16 18:04:58 1994  Mark Eichin  (eichin@tweedledumber.cygnus.com)

	* configure.in: check for vhangup.
	sys_term.c (cleanup): check for HAVE_VHANGUP.
	(cleanopen): ditto.

Mon Aug  8 01:15:27 1994  Mark Eichin  (eichin@cygnus.com)

	* utility.c (putf): don't misdeclare index/rindex, strings.h
	already got included. Don't even use them -- use str*chr instead.

Thu Aug  4 03:37:26 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: pick up dbm libs

	* sys_term.h: fix linux lossage, i.e. <linux/tty.h>
	* configure.in: check for STREAMSPTY (hopefully)

	* Makefile.in:
	* configure.in: make install changes

Tue Jul 26 18:23:01 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: fix missing $(srcdir)

Mon Jul 25 02:35:16 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: check for utmpx
