@@ -24,7 +24,7 @@ AC_COMPILE_CHECK([cc_t],[#include <termio.h>],
 fi
 fi
 AC_HEADER_TIME
-AC_CHECK_HEADERS(sys/time.h)
+AC_CHECK_HEADERS(sys/time.h sys/tty.h)
 AC_HAVE_FUNCS(vhangup)
 AC_FUNC_CHECK(grantpt,AC_DEFINE(STREAMSPTY))
 AC_FUNC_CHECK(gettosbyname,AC_DEFINE(HAS_GETTOS))
